--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "filequeue": "^0.5.0",
     "imagesize": "^1.0.0",
     "express": "^4.8.2",
-    "sharp": "^0.5.2"
+    "sharp": "^0.5.2",
+    "cluster": "^0.7.7"
   }
 }
