--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "gm": "^1.16.0",
     "express": "^4.8.2",
-    "sharp": "^0.6.1",
+    "sharp": "git://github.com/lovell/sharp.git",
     "socket.io": "^1.0.6",
     "vnstat-dumpdb": "^1.0.2"
   }
