--- a/ansible/files/unsplash-it.conf
+++ b/ansible/files/unsplash-it.conf
@@ -7,13 +7,16 @@ expect fork
 
 env APPLICATION_START="/opt/unsplash-it/index.js"
 env LOG="/var/log/unsplash-it.log"
+env HOME=/home/unsplash
 
 setuid unsplash
 
 script
+    cd $HOME
     exec forever -l $LOG -a --minUptime 5000 --spinSleepTime 2000 --killSignal SIGTERM start $APPLICATION_START
 end script
 
 pre-stop script
+    cd $HOME
     exec forever stop $APPLICATION_START >> $LOG
 end script
