Further ansible tweaks, remove images on error, add buildcache

--- a/ansible/handlers/handlers.yml
+++ b/ansible/handlers/handlers.yml
@@ -12,4 +12,4 @@
   command: initctl restart unsplash-it
 
 - name: restart sshd
-  command: name=ssh state=restarted
+  service: name=ssh state=restarted
