--- a/ansible/upgrade-unsplash-downloader.yml
+++ b/ansible/upgrade-unsplash-downloader.yml
@@ -2,6 +2,6 @@
 - hosts: unsplash
   tasks:
     - name: Update repo
-      shell: "cd /opt/unsplash-download && su unsplash -c 'cd /opt/unsplash-downloader && git pull && npm install'"
+      shell: "cd /opt/unsplash-downloader && su unsplash -c 'cd /opt/unsplash-downloader && git pull && npm install'"
   handlers:
    - include: handlers/handlers.yml
