--- a/ansible/files/unsplash-downloader.conf
+++ b/ansible/files/unsplash-downloader.conf
@@ -2,5 +2,5 @@ module.exports = exports = {
 	concurrent_downloads: 5,
 	folder_path: '/opt/photos',
 	git_push: true,
-	post_command: 'initctl stop unsplash-it && initctl start unsplash-it'
+	post_command: 'sudo service unsplash-it restart'
 }
