--- a/ansible/upgrade-unsplash-downloader.yml
+++ b/ansible/upgrade-unsplash-downloader.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: unsplash
+- hosts: unsplash-it
   tasks:
     - name: Update repo
       shell: "cd /opt/unsplash-downloader && su unsplash -c 'cd /opt/unsplash-downloader && git pull && npm install'"
