Create zip of images, serve using nginx

--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -54,6 +54,10 @@ server {
     try_files $uri.html $uri $uri/ @node;
   }
 
+  location /photos.zip {
+    alias /opt/unsplash-downloader/photos.zip;
+  }
+
   location @node {
     sendfile off;
     proxy_pass         http://app;
