--- a/ansible/files/unsplash-downloader.conf
+++ b/ansible/files/unsplash-downloader.conf
@@ -2,5 +2,6 @@ module.exports = exports = {
 	concurrent_downloads: 5,
 	folder_path: '/opt/photos',
 	git_push: true,
-	post_command: 'sudo service unsplash-it restart'
+	post_command: 'sudo service unsplash-it restart',
+	create_zip: './photos.zip'
 }
