--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gm": "^1.16.0",
     "sharp": "git://github.com/lovell/sharp.git",
     "socket.io": "^1.0.6",
-    "vnstat-dumpdb": "^1.0.2"
+    "vnstat-dumpdb": "^1.0.2",
+    "async": "^0.9.0"
   }
 }
