--- a/ansible/tasks/unsplash-downloader.yml
+++ b/ansible/tasks/unsplash-downloader.yml
@@ -5,6 +5,12 @@
 - name: Clone the repo
   shell: "cd /opt/unsplash-downloader && su unsplash -c 'git clone https://github.com/DMarby/unsplash-downloader.git /opt/unsplash-downloader'"
 
+- name: Set git name
+  shell: su unsplash -c 'git config --global user.name "Unsplash"'
+
+- name: Set git email
+  shell: su unsplash -c 'git config --global user.email "david@dmarby.se"'
+
 - name: Install dependencies for unsplash-downloader
   shell: "su unsplash -c 'cd /opt/unsplash-downloader && npm install'"
 
