--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "cors": "^2.4.2",
     "express": "^4.8.2",
-    "gm": "^1.16.0",
-    "sharp": "git://github.com/lovell/sharp.git",
+    "sharp": "git://github.com/lovell/sharp.git#edge",
     "socket.io": "^1.0.6",
     "vnstat-dumpdb": "^1.0.2",
     "async": "^0.9.0"
