--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -1,6 +1,6 @@
 server {
-  listen 80 default_server;
-  listen 443 default_server ssl;
+  listen [::]:80 default_server;
+  listen [::]:443 default_server ssl;
   server_name _;
 
   ssl_certificate    /etc/ssl/unsplash.crt;
@@ -29,8 +29,8 @@ upstream socket {
 }
 
 server {
-  listen 80;
-  listen 443 ssl;
+  listen [::]:80;
+  listen [::]:443 ssl;
   server_name unsplash.it;
 
   ssl_certificate    /etc/ssl/unsplash.crt;
@@ -85,7 +85,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-  listen 4000 ssl;
+  listen [::]:4000 ssl;
   server_name unsplash.it;
 
   ssl_certificate    /etc/ssl/unsplash.crt;
