--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ ansible/files/unsplash.key
 ansible/files/unsplash.crt
 ansible/files/unsplash_rsa
 ansible/files/vnstat.db
+ansible/files/photos.zip
+ansible/files/photos.json
+ansible/files/stats.json
