--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
         "metadata_path": "/opt/photos/metadata.json",
         "max_height": 5000,
         "max_width": 5000,
-        "stats_port": 3000
+        "stats_port": 3000,
+        "port": 5000
     },
     "development": {
         "folder_path": "../unsplash-downloader/photos",
@@ -17,6 +18,7 @@
         "metadata_path": "../unsplash-downloader/photos/metadata.json",
         "max_height": 5000,
         "max_width": 5000,
-        "stats_port": 3000
+        "stats_port": 3000,
+        "port": 5000
     }
 }
