--- a/ansible/files/unsplash-downloader.conf
+++ b/ansible/files/unsplash-downloader.conf
@@ -1,7 +1,9 @@
 module.exports = exports = {
-	concurrent_downloads: 5,
-	folder_path: '/opt/photos',
-	git_push: true,
-	post_command: 'sudo service unsplash-it restart',
-	create_zip: './photos.zip'
+  concurrent_downloads: 5,
+  folder_path: '/opt/photos',
+  git_push: true,
+  post_command: 'sudo service unsplash-it restart',
+  create_zip: './photos.zip',
+  all: false,
+  check_for_deleted: true
 }
