Update ansible hosts

--- a/ansible/upgrade-nginx-config.yml
+++ b/ansible/upgrade-nginx-config.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: unsplash-it
+- hosts: all
   tasks:
     - name: Update nginx config
       copy: src=files/nginx.conf dest=/etc/nginx/conf.d/unsplash.conf
