--- a/ansible/upgrade-unsplash-it.yml
+++ b/ansible/upgrade-unsplash-it.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: unsplash-it
+- hosts: all
   tasks:
     - name: Update repo
       shell: "cd /opt/unsplash-it && su unsplash -c 'cd /opt/unsplash-it && git pull && npm install'"
