Remove cached images if they haven't been used in 14 days

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ cache
 node_modules
 images.json
 stats.json
+cache.json
 ansible/files/unsplash.key
 ansible/files/unsplash.crt
 ansible/files/unsplash_rsa
