--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "author": "David Marby <david@dmarby.se> (http://dmarby.se)",
   "dependencies": {
+    "async": "^0.9.0",
     "cors": "^2.4.2",
     "express": "^4.8.2",
+    "moment": "^2.9.0",
     "sharp": "git://github.com/lovell/sharp.git#edge",
     "socket.io": "^1.0.6",
-    "vnstat-dumpdb": "^1.0.2",
-    "async": "^0.9.0"
+    "vnstat-dumpdb": "^1.0.2"
   }
 }
