Send 404 for robots.txt

--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -62,6 +62,10 @@ server {
     alias /opt/unsplash-downloader/photos.zip;
   }
 
+  location /robots.txt {
+    return 404 "{\"error\":\"Not found\"}";
+  }
+
   location @node {
     sendfile off;
     proxy_pass         http://app;
