Consistency in error message

--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -63,7 +63,7 @@ server {
   }
 
   location /robots.txt {
-    return 404 "{\"error\":\"Not found\"}";
+    return 404 "{\"error\":\"Resource not found\"}";
   }
 
   location @node {
