--- a/ansible/copy.yml
+++ b/ansible/copy.yml
@@ -7,10 +7,8 @@
       fetch: src=/var/lib/vnstat/eth0 dest=files/vnstat.db flat=yes
     - name: Start vnstat
       service: name=vnstat state=started
-    - name: Copy photos.zip
-      fetch: src=/opt/unsplash-downloader/photos.zip dest=files/photos.zip flat=yes
-    - name: Copy photos.json
-      fetch: src=/opt/unsplash-downloader/photos.json dest=files/photos.json flat=yes
+    #- name: Copy photos.zip
+    #  fetch: src=/opt/unsplash-downloader/photos.zip dest=files/photos.zip flat=yes
     - name: Stop unsplash-it
       service: name=unsplash-it state=stopped
     - name: Copy stats.json
