--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "David Marby <david@dmarby.se> (http://dmarby.se)",
   "dependencies": {
     "async": "^0.9.0",
+    "compression": "^1.5.0",
     "cors": "^2.4.2",
     "express": "^4.8.2",
     "moment": "^2.9.0",
