--- a/ansible/files/nginx.conf
+++ b/ansible/files/nginx.conf
@@ -53,12 +53,14 @@ server {
   add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
 
   location / {
+    gzip on;
     root /opt/unsplash-it/public;
     index index.html;
     try_files $uri.html $uri $uri/ @node;
   }
 
   location /photos.zip {
+    gzip on;
     alias /opt/unsplash-downloader/photos.zip;
   }
 
