--- a/ansible/roles/unsplash-it/tasks/main.yml
+++ b/ansible/roles/unsplash-it/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: Install dependencies for unsplash-it
   shell: "su unsplash -c 'cd /opt/unsplash-it && npm install'"
 
-- name: "Create unsplash-it.log"
+- name: Create unsplash-it.log
   file: path=/var/log/unsplash-it.log owner=unsplash group=unsplash mode=0644 state=touch
 
 - name: Copy upstart job for unsplash-it
