--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unsplash-it",
+  "name": "picsum-photos",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/DMarby/unsplash-it.git"
+    "url": "https://github.com/DMarby/picsum-photos.git"
   },
   "author": "David Marby <david@dmarby.se> (http://dmarby.se)",
   "dependencies": {
