--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -5,3 +5,11 @@
 [[constraint]]
   name = "github.com/onsi/gomega"
   version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/gin-gonic/gin"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/oklog/run"
+  version = "1.0.0"
