--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "cors": "^2.4.2",
     "express": "^4.8.2",
     "moment": "^2.9.0",
-    "sharp": "^0.10.1",
-    "socket.io": "^1.0.6",
-    "vnstat-dumpdb": "^1.0.2"
+    "sharp": "^0.19.0"
   }
 }
