--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -7,9 +7,13 @@
   version = "1.2.0"
 
 [[constraint]]
-  name = "github.com/gin-gonic/gin"
-  version = "1.2.0"
+  name = "github.com/oklog/run"
+  version = "1.0.0"
 
 [[constraint]]
-  name = "github.com/oklog/run"
+  name = "github.com/go-chi/chi"
+  version = "3.3.2"
+
+[[constraint]]
+  name = "github.com/go-chi/render"
   version = "1.0.0"
