--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -17,3 +17,7 @@
 [[constraint]]
   name = "github.com/go-chi/render"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/oceanicdev/chi-param"
+  version = "1.0.0"
