Finish implementation of remaining endpoints
- Swap out chi for gorilla/mux
- Add logging
- Add error handling
- Remove ginkgo/gomega
- Remove unused docker(compose) config/scripts
- Set cache headers
- Set CORS headers

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,27 @@
 # Ignore everything
 **/*
 
+# Include makefile
+!Makefile
+
+# Include go module information
+!go.mod
+!go.sum
+
 # Include main file
 !main.go
 
-# Include Gopkg
-!Gopkg.lock
-!Gopkg.toml
-
 # Include packages
+!api
+!cache
+!database
+!health
 !image
+!logger
+!queue
+!storage
+!test
+!vips
 
 # Exclude debug files
 **/debug
