Update the frontend
- Stop using the deprecated APIs
- Update the documentation
- Get rid of jquery
- Swap out bootstrap for tailwind

--- a/.dockerignore
+++ b/.dockerignore
@@ -19,10 +19,15 @@
 !image
 !logger
 !queue
-!static
+!src
 !storage
 !test
 !vips
+
+# Include frontend build-pipeline stuff
+!gulpfile.js
+!package.json
+!package-lock.json
 
 # Exclude debug files
 **/debug
