Adjust container limits

--- a/kubernetes/picsum.yaml
+++ b/kubernetes/picsum.yaml
@@ -16,10 +16,9 @@ spec:
         - containerPort: 8080
         resources:
           requests:
-            memory: 1Gi
             cpu: 2
           limits:
-            memory: 1Gi
+            memory: 500Mi
             cpu: 3
         livenessProbe:
           httpGet:
