--- a/kubernetes/varnish-config.yaml
+++ b/kubernetes/varnish-config.yaml
@@ -52,6 +52,9 @@ data:
     }
 
     sub vcl_recv {
+      # Block sites abusing the service with extremely large amounts of traffic
+      call blocked_sites;
+
       # Healthcheck for k8s
       if (req.url ~ "^/varnish_health") {
         return (synth(200, "healthcheck"));
@@ -69,6 +72,18 @@ data:
       if (std.healthy(req.backend_hint)) {
         # Change the behavior for healthy backends: Cap grace to 10s
         set req.grace = 10s;
+      }
+    }
+
+    sub blocked_sites {
+      if (
+        req.http.referer ~ "tube8\.com" ||
+        req.http.referer ~ "tube8\.es" ||
+        req.http.referer ~ "tube8\.fr" ||
+        req.http.referer ~ "eltiempo\.es" ||
+        req.http.referer ~ "clima\.com"
+      ) {
+        return (synth(403, "blocked"));
       }
     }
 
