--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,35 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Package",
+      "name": "picsum-photos",
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceRoot}",
-      "showLog": true
+      "program": "${workspaceRoot}/cmd/picsum-photos",
+      "showLog": true,
+      "cwd": "${workspaceRoot}",
+      "env": {
+        "PICSUM_ROOT_URL": "http://localhost:8080",
+        "PICSUM_IMAGE_SERVICE_URL": "http://localhost:8081"
+      }
+    },
+    {
+      "name": "image-service",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceRoot}/cmd/image-service",
+      "showLog": true,
+      "cwd": "${workspaceRoot}"
+    }
+  ],
+  "compounds": [
+    {
+      "name": "All",
+      "configurations": [
+        "picsum-photos",
+        "image-service"
+      ]
     }
   ]
 }
